# bmk-tools

./: .gitignore  README.md  get_access_token.py  manage.py  pyproject.toml  requirements-test.txt  requirements.txt  startup.sh
.github/workflows/: main_bmk-tools.yml  test.yml
bmk_tools/: manage.py  production.py  settings.py  tests.py  tools.py  urls.py  views.py  wsgi.py
bmk_tools/bmk_tools/: asgi.py  settings.py  urls.py  wsgi.py
bmk_tools/core_tools/: apps.py  urls.py  views.py
bmk_tools/info_mails/: apps.py
bmk_tools/km_evaluation/: apps.py  forms.py  models.py  urls.py  views.py
bmk_tools/templates/: base.html  home.html
bring_list/: README.md  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
bring_list/migrations/: 0001_initial.py  0002_bringlist_show_quantity.py
festival/: README.md  admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  utils_km.py  views.py
festival/migrations/: 0001_initial.py  0002_alter_shift_id_alter_task_id.py  0002_participant_pinned.py  0003_populate_uuids.py  0004_remove_festival_date_festival_end_date_and_more.py  0005_tasktemplate.py  (+3 more)
guides/: README.md  config.example.yaml  generate_guide_pdf.py
info_mail/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
km_stats/: apps.py  dash_app.py  urls.py  views.py
orders/: README.md  admin.py  forms.py  models.py  urls.py  views.py
templates/: base.html  home.html
tickets/: README.md  admin.py  context_processors.py  decorators.py  forms.py  models.py  tests.py  urls.py  views.py
(+90 files in other folders)
